fix(modal window): add 'position: fixed'
Previously, the modal window and the backdrop associated with it had
'position: absolute'. However, if a page was so large that a scrollbar
appeared there, the modal window wouldn't be visible unless you
scrolled all the way to the top of the page.

This commit fixes this behaviour by changing the 'position' property to
'fixed'.

--- a/client/src/components/UI/Backdrop/Backdrop.module.css
+++ b/client/src/components/UI/Backdrop/Backdrop.module.css
@@ -1,7 +1,7 @@
 .backdrop {
     width: 100%;
     height: 100%;
-    position: absolute;
+    position: fixed;
     background: rgba(0, 0, 0, .7);
     /* z-index: 999 will be used for a modal window or something similar that will be on top of the backdrop */
     z-index: 998;
