--- a/client/src/components/UI/Modal/Modal.module.css
+++ b/client/src/components/UI/Modal/Modal.module.css
@@ -2,7 +2,7 @@
     width: 30%;
     display: inline-block;
     background: #fff;
-    position: absolute;
+    position: fixed;
     z-index: 999;
 }
 
